--- a/src/Header.css
+++ b/src/Header.css
@@ -1,9 +1,10 @@
 .header {
   display: flex;
+  justify-content: space-evenly;
 }
 
-.header__left{
-    display: flex;
+.header__left {
+  display: flex;
 }
 
 .header__left > img {
@@ -13,17 +14,21 @@
 }
 
 .header__search {
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    border-radius: 5px;
-    height: 22px;
-    color: gray;
-    background-color:#eef3f8;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  height: 22px;
+  color: gray;
+  background-color: #eef3f8;
 }
 
 .header__search > input {
-    outline: none;
-    border: none;
-    background: none;
+  outline: none;
+  border: none;
+  background: none;
+}
+
+.header__right {
+  display: flex;
 }
