--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,4 +1,12 @@
 .sidebar {
     position: sticky;
     top: 80px;
+    flex:0.2;
+    border-radius: 10px;
+    text-align: center;
+    height:fit-content;
+}
+
+.sidebar__avatar {
+    margin-bottom:10px;
 }
