--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -10,3 +10,15 @@
 .sidebar__avatar {
     margin-bottom:10px;
 }
+
+.sidebar__top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid lightgray;
+    border-bottom: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color: #fff;
+    padding-bottom: 10px;
+}
