--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,14 +1,14 @@
 .sidebar {
     position: sticky;
     top: 80px;
-    flex:0.2;
+    flex: 0.2;
     border-radius: 10px;
     text-align: center;
     height:fit-content;
 }
 
 .sidebar__avatar {
-    margin-bottom:10px;
+    margin-bottom:10px; 
 }
 
 .sidebar__top {
@@ -21,4 +21,19 @@
     border-top-right-radius: 10px;
     background-color: #fff;
     padding-bottom: 10px;
+}
+
+.sidebar__top > img {
+    margin-bottom: -20px;
+    width: 100%;
+    height: 60px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    object-fit: cover;
+}
+
+.sidebar__stat {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
 }
