updated Sidebar component

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -23,6 +23,15 @@
     padding-bottom: 10px;
 }
 
+.sidebar__top > h4 {
+    color:gray;
+    font-size: 12px;
+}
+
+.sidebar__top > h2 {
+    font-size: 18px;
+}
+
 .sidebar__top > img {
     margin-bottom: -20px;
     width: 100%;
@@ -56,4 +65,30 @@
 .sidebar__statNumber {
     font-weight: bold;
     color: #0a66c2 !important;
+}
+
+.sidebar__bottom {
+    text-align: left;
+    padding: 10px;
+    border: 1px solid lightgray;
+    background-color: #fff;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.sidebar__recentItem {
+    display: flex;
+    font-size:13;
+    color: gray;
+    font-weight: bolder;
+    cursor: pointer;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+.sidebar__recentItem:hover {
+    background-color: whitesmoke;
+    border-radius: 10px;
+    cursor: pointer;
+    color: black;
 }
