--- a/src/Feed.css
+++ b/src/Feed.css
@@ -1,5 +1,5 @@
 .feed {
-    /* flex: 0.8; */
+    flex: 0.6;
     margin: 0 20px;
 }
 
@@ -9,4 +9,30 @@
     padding-bottom: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
+}
+
+.feed__input {
+    border: 1px solid lightgray;
+    border-radius: 30px;
+    display: flex;
+    padding: 10px;
+    color: gray;
+    padding-left: 15px;
+}
+
+.feed__input > form {
+    display: flex;
+    width: 100%;
+}
+
+.feed__input > form > input {
+    border: none;
+    flex: 1;
+    margin-left: 10px;
+    outline-width: 0;
+    font-weight: 600;
+}
+
+.feed__input > form > button {
+    display: none;
 }
