--- a/src/Widgets.css
+++ b/src/Widgets.css
@@ -20,3 +20,22 @@
     font-size: 16px;
     font-weight: 400;
 }
+
+.widgets__article {
+    display: flex;
+    padding:10px;
+    cursor: pointer;
+}
+
+.widgets__article:hover {
+    background-color: whitesmoke;
+}
+
+.widgets__articleLeft {
+    color:#0177b7;
+    margin-right: 5px;
+}
+
+.widgets__articleLeft > .MuiSvgIcon-root{
+    font-size: 15px;
+}
