--- a/src/Widgets.css
+++ b/src/Widgets.css
@@ -39,3 +39,17 @@
 .widgets__articleLeft > .MuiSvgIcon-root{
     font-size: 15px;
 }
+
+.widgets__articleRight {
+    flex: 1;
+}
+
+.widgets__articleRight > h4 {
+    font-size: 14px;
+}
+
+
+.widgets__articleRight > p {
+    font-size: 12px;
+    color: gray;
+}
